@@ -1,5 +1,4 @@
 #include <qapplication.h>
-#define QTTESTRUNNER_API __declspec(dllimport)
 #include <cppunit/ui/qt/TestRunner.h>
 #include <cppunit/extensions/TestFactoryRegistry.h>
 
@@ -8,8 +7,8 @@ int main( int argc, char** argv )
 {
 	QApplication app( argc, argv );
 
-	CppUnit::QtUi::TestRunner runner;
-	runner.addTest( CppUnit::TestFactoryRegistry::getRegistry().makeTest() );
+	CPPUNIT_NS::QtUi::TestRunner runner;
+	runner.addTest( CPPUNIT_NS::TestFactoryRegistry::getRegistry().makeTest() );
 	runner.run( true );
 
 	return 0;
